--- a/taskpane.html
+++ b/taskpane.html
@@ -67,6 +67,14 @@
     <option value="">-- Select a category first --</option>
   </select>
 
+  <!-- WORKSTATION NAME (REQUIRED) -->
+  <label for="workstation">Workstation Name (Required):</label>
+  <input id="workstation" placeholder="e.g. FRONTDESK01, CLINICPC05">
+
+  <!-- CALLBACK NUMBER (REQUIRED) -->
+  <label for="callback">Callback Number (Required):</label>
+  <input id="callback" placeholder="e.g. 555-123-4567">
+
   <!-- LOCATION CODE -->
   <label for="location">Location Code:</label>
   <input id="location" placeholder="e.g. END073, PO0806, OS0204">
