--- a/taskpane.html
+++ b/taskpane.html
@@ -51,6 +51,8 @@
   <label for="category">Issue Category:</label>
   <select id="category">
     <option value="">-- Select a category --</option>
+
+    <!-- Existing -->
     <option value="PMS / Practice Management System">PMS / Practice Management System</option>
     <option value="Imaging Software">Imaging Software</option>
     <option value="Email/Outlook">Email/Outlook</option>
@@ -59,6 +61,11 @@
     <option value="Hardware">Hardware</option>
     <option value="Network/Internet">Network/Internet</option>
     <option value="Other">Other</option>
+
+    <!-- NEW -->
+    <option value="RingCentral">RingCentral</option>
+    <option value="Security">Security</option>
+    <option value="Acumen">Acumen</option>
   </select>
 
   <!-- SUBCATEGORY -->
