--- a/taskpane.html
+++ b/taskpane.html
@@ -78,6 +78,13 @@
   <label for="workstation">Workstation Name (Required):</label>
   <input id="workstation" placeholder="e.g. FRONTDESK01, CLINICPC05">
 
+  <!-- WINDOWS-ONLY INSTRUCTION -->
+  <p style="font-size: 12px; color: #666; margin-top: -8px; margin-bottom: 12px;">
+    <strong>How to find your workstation name (Windows only):</strong>
+    Press <kbd>Windows</kbd> + <kbd>R</kbd>, type <code>cmd</code>, and run the command
+    <code>hostname</code> — or go to <em>Settings → System → About</em> and look for “Device name.”
+  </p>
+
   <!-- CALLBACK NUMBER (REQUIRED) -->
   <label for="callback">Callback Number (Required):</label>
   <input id="callback" placeholder="e.g. 555-123-4567">
