--- a/taskpane.html
+++ b/taskpane.html
@@ -24,6 +24,7 @@
       border: 1px solid #ccc;
       border-radius: 4px;
       box-sizing: border-box;
+      font-size: 13px;
     }
     button {
       background-color: #0078d4;
@@ -40,50 +41,61 @@
     h3 {
       margin-bottom: 20px;
     }
+    small {
+      font-size: 11px;
+      color: #666;
+    }
+    .inline-hint {
+      margin-top: -8px;
+      margin-bottom: 12px;
+      display: block;
+    }
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 
 <body>
 
-  <h3>Submit IT Support Ticket</h3>
+  <h3>Submit Support Ticket</h3>
+
+  <!-- DEPARTMENT -->
+  <label for="department">Department (Required):</label>
+  <select id="department">
+    <option value="">-- Select a department --</option>
+    <option value="IT">IT</option>
+    <option value="CBO - Full Service">CBO - Full Service</option>
+    <option value="Payor Relations">Payor Relations</option>
+    <option value="RCM - Non Full Service">RCM - Non Full Service</option>
+  </select>
 
   <!-- CATEGORY -->
   <label for="category">Issue Category:</label>
   <select id="category">
-    <option value="">-- Select a category --</option>
-
-    <!-- Existing -->
-    <option value="PMS / Practice Management System">PMS / Practice Management System</option>
-    <option value="Imaging Software">Imaging Software</option>
-    <option value="Email/Outlook">Email/Outlook</option>
-    <option value="Teams">Teams</option>
-    <option value="SharePoint">SharePoint</option>
-    <option value="Hardware">Hardware</option>
-    <option value="Network/Internet">Network/Internet</option>
-    <option value="Other">Other</option>
-
-    <!-- NEW -->
-    <option value="RingCentral">RingCentral</option>
-    <option value="Security">Security</option>
-    <option value="Acumen">Acumen</option>
+    <option value="">-- Select a department first --</option>
   </select>
 
-  <!-- SUBCATEGORY -->
-  <label for="subcategory">Subcategory:</label>
-  <select id="subcategory" disabled>
+  <!-- SUBCATEGORY (IT ONLY) -->
+  <label for="subcategory" id="subcategory-label" class="hidden">Subcategory:</label>
+  <select id="subcategory" class="hidden">
     <option value="">-- Select a category first --</option>
+  </select>
+
+  <!-- SUB-SUBCATEGORY FOR PMS / IMAGING (IT ONLY) -->
+  <label for="system" id="system-label" class="hidden">PMS / Imaging System:</label>
+  <select id="system" class="hidden">
+    <option value="">-- Select a system --</option>
   </select>
 
   <!-- WORKSTATION NAME (REQUIRED) -->
   <label for="workstation">Workstation Name (Required):</label>
   <input id="workstation" placeholder="e.g. FRONTDESK01, CLINICPC05">
-
-  <!-- WINDOWS-ONLY INSTRUCTION -->
-  <p style="font-size: 12px; color: #666; margin-top: -8px; margin-bottom: 12px;">
-    <strong>How to find your workstation name (Windows only):</strong>
-    Press <kbd>Windows</kbd> + <kbd>R</kbd>, type <code>cmd</code>, and run the command
-    <code>hostname</code> — or go to <em>Settings → System → About</em> and look for “Device name.”
-  </p>
+  <small class="inline-hint">
+    Windows: Press <strong>Windows key + Pause/Break</strong> (or go to
+    <strong>Settings &gt; System &gt; About</strong>) and use the value shown as
+    <strong>Device name</strong>.
+  </small>
 
   <!-- CALLBACK NUMBER (REQUIRED) -->
   <label for="callback">Callback Number (Required):</label>
