--- a/taskpane.html
+++ b/taskpane.html
@@ -88,14 +88,14 @@
     <option value="">-- Select a system --</option>
   </select>
 
-  <!-- WORKSTATION NAME (REQUIRED) -->
-  <label for="workstation">Workstation Name (Required):</label>
-  <input id="workstation" placeholder="e.g. FRONTDESK01, CLINICPC05">
-  <small class="inline-hint">
-    Windows: Press <strong>Windows key + Pause/Break</strong> (or go to
-    <strong>Settings &gt; System &gt; About</strong>) and use the value shown as
-    <strong>Device name</strong>.
-  </small>
+<!-- WORKSTATION NAME (REQUIRED) -->
+<label for="workstation">Workstation Name (Required):</label>
+<input id="workstation" placeholder="e.g. FRONTDESK01, CLINICPC05">
+<small class="inline-hint">
+  Windows: Go to <strong>Settings &gt; System &gt; About</strong> and use the value shown as
+  <strong>Device name</strong>.
+</small>
+
 
   <!-- CALLBACK NUMBER (REQUIRED) -->
   <label for="callback">Callback Number (Required):</label>
@@ -114,3 +114,4 @@
 
 </body>
 </html>
+
