--- a/taskpane.html
+++ b/taskpane.html
@@ -187,6 +187,14 @@
       </div>
     </div>
 
+    <!-- CONTACT NAME (Required) -->
+<label for="contactName" class="section-title">
+  <svg class="icon" viewBox="0 0 24 24"><path d="M12 2a5 5 0 0 1 5 5c0 2.76-2.24 5-5 5s-5-2.24-5-5a5 5 0 0 1 5-5Zm0 12c4.42 0 8 2.24 8 5v1H4v-1c0-2.76 3.58-5 8-5Z"/></svg>
+  Contact Name (Required):
+</label>
+<input id="contactName" placeholder="e.g. John Smith, Dr. Allen">
+
+
     <!-- CALL BACK -->
     <label for="callback" class="section-title">
       <svg class="icon" viewBox="0 0 24 24"><path d="M17 2a3 3 0 0 1 3 3c0 8.28-6.72 15-15 15a3 3 0 1 1-1.5-5.62 1 1 0 0 1 1.03.24l2.2 2.19a1 1 0 0 0 1.34.07 12.05 12.05 0 0 0 6.83-6.83 1 1 0 0 0-.08-1.34L14.4 7.5a1 1 0 0 1-.25-1.03A3 3 0 0 1 17 2Z"/></svg>
@@ -213,3 +221,4 @@
 
 </body>
 </html>
+
