--- a/taskpane.html
+++ b/taskpane.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <title>Submit Support Ticket</title>
+
+  <!-- Office.js -->
   <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+
+  <!-- Our logic -->
   <script src="taskpane.js"></script>
 
   <style>
@@ -19,6 +23,8 @@
       padding: 20px 24px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.10);
       border: 1px solid #e1e1e1;
+      max-width: 460px;
+      margin: auto;
     }
 
     h2 {
@@ -64,6 +70,7 @@
       border: 1px solid #c8c6c4;
       background: #ffffff;
       transition: border 0.15s;
+      box-sizing: border-box;
     }
 
     input:focus, textarea:focus, select:focus {
@@ -99,17 +106,13 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.15);
     }
 
-    button:active {
-      background-color: #005a9e;
-    }
-
     .icon {
       width: 18px;
       height: 18px;
       opacity: 0.75;
     }
 
-    /* Workstation hint box styling */
+    /* Workstation hint box */
     #ws-hint {
       background: #eef6ff;
       border-left: 4px solid #0078d4;
@@ -126,6 +129,7 @@
 <body>
 
   <div class="card">
+
     <h2>
       <svg class="icon" viewBox="0 0 24 24"><path d="M6 3h3.17A3 3 0 0 1 12 1a3 3 0 0 1 2.83 2H18a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Zm5-1a1 1 0 0 0-1 1h2a1 1 0 0 0-1-1Zm0 6h6v2h-6V8Zm0 4h6v2h-6v-2Zm0 4h4v2h-4v-2Z"/></svg>
       Submit Support Ticket
@@ -171,6 +175,13 @@
       <option value="">-- Select a system --</option>
     </select>
 
+    <!-- CONTACT NAME -->
+    <label for="contactName" class="section-title">
+      <svg class="icon" viewBox="0 0 24 24"><path d="M12 2a5 5 0 0 1 5 5c0 2.76-2.24 5-5 5s-5-2.24-5-5a5 5 0 0 1 5-5Zm0 12c4.42 0 8 2.24 8 5v1H4v-1c0-2.76 3.58-5 8-5Z"/></svg>
+      Contact Name (Required):
+    </label>
+    <input id="contactName" placeholder="e.g. John Smith">
+
     <!-- WORKSTATION (IT ONLY) -->
     <div id="ws-block">
       <label id="ws-label" class="hidden section-title">
@@ -178,24 +189,16 @@
         Workstation Name (Required):
       </label>
 
-      <input id="workstation" class="hidden" placeholder="e.g. FRONTDESK01, CLINICPC05">
+      <input id="workstation" class="hidden" placeholder="e.g. FRONTDESK01">
 
       <div id="ws-hint" class="hidden">
         <strong>How to find your workstation name (Windows):</strong><br>
-        Go to <strong>Settings &gt; System &gt; About</strong> and use the value shown as
+        Go to <strong>Settings &gt; System &gt; About</strong>, and use the value shown as
         <strong>Device name</strong>.
       </div>
     </div>
 
-    <!-- CONTACT NAME (Required) -->
-<label for="contactName" class="section-title">
-  <svg class="icon" viewBox="0 0 24 24"><path d="M12 2a5 5 0 0 1 5 5c0 2.76-2.24 5-5 5s-5-2.24-5-5a5 5 0 0 1 5-5Zm0 12c4.42 0 8 2.24 8 5v1H4v-1c0-2.76 3.58-5 8-5Z"/></svg>
-  Contact Name (Required):
-</label>
-<input id="contactName" placeholder="e.g. John Smith, Dr. Allen">
-
-
-    <!-- CALL BACK -->
+    <!-- CALLBACK -->
     <label for="callback" class="section-title">
       <svg class="icon" viewBox="0 0 24 24"><path d="M17 2a3 3 0 0 1 3 3c0 8.28-6.72 15-15 15a3 3 0 1 1-1.5-5.62 1 1 0 0 1 1.03.24l2.2 2.19a1 1 0 0 0 1.34.07 12.05 12.05 0 0 0 6.83-6.83 1 1 0 0 0-.08-1.34L14.4 7.5a1 1 0 0 1-.25-1.03A3 3 0 0 1 17 2Z"/></svg>
       Callback Number (Required):
@@ -217,8 +220,8 @@
     <textarea id="description" rows="5" placeholder="Describe the issue in detail..."></textarea>
 
     <button id="submitBtn">Submit Ticket</button>
+
   </div>
 
 </body>
 </html>
-
