--- a/taskpane.html
+++ b/taskpane.html
@@ -14,7 +14,6 @@
       padding: 20px;
     }
 
-    /* Card */
     .card {
       background: #ffffff;
       border: 1px solid #d0d0d0;
@@ -67,17 +66,15 @@
       cursor: pointer;
       padding: 12px;
       font-weight: 600;
-      transition: background 0.2s ease;
       margin-top: 10px;
+      transition: background 0.2s ease;
     }
 
     button:hover {
       background-color: #005a9e;
     }
 
-    .hidden {
-      display: none;
-    }
+    .hidden { display: none; }
 
     .inline-hint {
       font-size: 13px;
@@ -103,10 +100,10 @@
 
     <h3>S1P Support Ticket</h3>
 
-    <!-- DEPARTMENT -->
-    <label for="department">Department:</label>
+    <!-- SUPPORT DEPARTMENT -->
+    <label for="department">Support Department:</label>
     <select id="department">
-      <option value="">-- Select a department --</option>
+      <option value="">-- Select a support department --</option>
       <option value="IT">IT</option>
       <option value="CBO - Full Service">CBO - Full Service</option>
       <option value="Payor Relations">Payor Relations</option>
