--- a/taskpane.html
+++ b/taskpane.html
@@ -1,11 +1,9 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8"/>
   <title>S1P Support Ticket</title>
   <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
-  <script src="taskpane.js"></script>
 
   <style>
     body {
@@ -133,7 +131,7 @@
     <label for="contactName">Contact Name (Required):</label>
     <input id="contactName" placeholder="Your name">
 
-    <!-- WORKSTATION (IT only) -->
+    <!-- WORKSTATION -->
     <div id="ws-section" class="hidden">
       <label id="ws-label" for="workstation">Workstation Name (Required for IT):</label>
       <input id="workstation" placeholder="e.g. FRONTDESK01, CLINICPC05">
@@ -148,7 +146,7 @@
 
     <!-- LOCATION CODE -->
     <label for="location">Location Code:</label>
-    <input id="location" placeholder="e.g. END073, PO0806, OS0204">
+    <input id="location" placeholder="e.g. END073, PO0806, OS0609">
 
     <!-- DESCRIPTION -->
     <label for="description">Description:</label>
@@ -162,6 +160,9 @@
     </p>
 
   </div>
+
+  <!-- IMPORTANT: JS LOADED LAST -->
+  <script src="taskpane.js"></script>
 
 </body>
 </html>
